# plk-auth

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  generate.bat  import-data.sql  init.sql  main.cpp  structure.txt
Project/Project/: main.cpp
exports/: a.csv
src/: main.cpp  migration_interface.hpp  postgres_migration.hpp
src/cli/: AppState.cpp  AppState.hpp  CliApp.cpp  CliApp.hpp  CommandFactory.cpp  IOHandler.hpp  StandardIOHandler.cpp  StandardIOHandler.hpp  StandartIOHandler.hpp  app_state.cpp  app_state.hpp  cli_app.cpp  cli_app.hpp  io_handler.hpp  standard_io_handler.cpp  standard_io_handler.hpp
src/cli/commands/: BaseCommand.hpp  CommandFactory.cpp  ExitCommand.cpp  ExitCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  base_command.hpp  command_factory.cpp  command_factory.hpp  command_registry.hpp  validation_result.hpp
src/dao/: access_permission_dao.cpp  access_permission_dao.hpp  data_export_import_dao.cpp  data_export_import_dao.hpp  log_dao.cpp  log_dao.hpp  user_dao.cpp  user_dao.hpp
src/db/: database.cpp  database.hpp  main.cpp
src/migrations/: migration_interface.hpp  postgres_migration.cpp
src/models/: access_permission.hpp  enums.hpp  log_enums.hpp  system_log.hpp  system_log.xml  user.hpp  user.xml  user_role.hpp  user_role_assignment.hpp  user_role_assignment.xml
src/services/: auth_service.cpp  auth_service.hpp  data_export_import_service.cpp  data_export_import_service.hpp  log_service.cpp  log_service.hpp  user_service.cpp  user_service.hpp
src/utils/: password_utils.hpp  uuid_generator.hpp
(+65 files in other folders)
